# youtube-snippets

./: .gitignore  README.md
rust-ex/: Cargo.toml  docs.md  hello.txt
rust-ex/examples/: redis-client.rs.bak  redis-server.rs  tokio-task.rs
rust-ex/src/: lib.rs  main.rs
rust-ex/src/snips/: 02.rs  12.rs  14a.rs  16.rs  ch10_p1.rs  ch10_p2.rs  ch10_p3_inprogress.rs  ch3_p1.rs  ch4_p4.rs  ch4_p5.rs  ch4_p6.rs  ch9_p1.rs  test.rs
rust-ex/src/snips/1-20/: 03.rs  06a.rs  06b.rs  07.rs  09.rs  10.rs  17.rs
rust-ex/src/snips/cookbook/: 01-random.rs  02-sort-vectors.rs  03-date.rs
rust-ex/src/snips/rust-by-ex/: 01-println.rs  02-literals.rs  03-tuple.rs  04-array.rs  05-struct.rs  06-enum.rs  07-constant.rs  08-casting.rs  09-from.rs  10-loops.rs  11-match.rs  12-if-let.rs  13-function.rs  14-closure.rs  15-generrics.rs  16-alloc.rs  17-ownership.rs  18-borrowing.rs  19-lifetime.rs  20-trait-p1.rs  21-trait-add-p2.rs  22-trait-iter-p3.rs  23-trait-copy.rs  24-trait-diamond.rs  25-macros.rs  26-error-option.rs  27-errorr-results.rs  28-std-box.rs  29-std-vec.rs  30-std-string.rs  31-std-hashmap.rs  32-std-hashset.rs  33-std-file.rs
rust-ex/src/snips/std/: String.rs  String.tldr
rust-ex/src/snips/the-book/: ch10-p4a.rs  ch10-p4b.rs  ch10-p4c.rs  ch10-p4d.rs  ch10_p3a.rs  ch10_p3b.rs  ch10_p3c.rs  ch10_p3d.rs  ch11_p1.rs  ch11_p2.rs  ch3_p2.rs  ch3_p3.rs  ch4_p1.rs  ch4_p2.rs  ch4_p3.rs  ch5_p1.rs  ch5_p2.rs  ch6_p1.rs  ch6_p2.rs  ch6_p3.rs  ch6_p4.rs  ch6_p5.rs  ch8_p1.rs  ch8_p2.rs  ch8_p3.rs  ch9_p2.rs  rs_ch13_p1_closure.rs  (+18 more)
rust-ex/tests/: test_say_hi.rs
(+25 files in other folders)
